--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,7 +77,7 @@ body{
   justify-content: space-between;
   background-color: hsla(0, 100%, 67%, 0.25);
   border: none;
-  border-radius: 15px;
+  border-radius: 10px;
   position: relative;
   bottom: 1rem;
 }
@@ -91,7 +91,7 @@ body{
   justify-content: space-between;
   background-color: hsla(39, 100%, 56%, 0.25);
   border: none;
-  border-radius: 15px;
+  border-radius: 10px;
   position: relative;
   bottom: 1.2rem;
 }
@@ -106,7 +106,7 @@ body{
   justify-content: space-between;
   background-color: hsla(166, 100%, 37%, 0.25);
   border: none;
-  border-radius: 15px;
+  border-radius: 10px;
   position: relative;
   bottom: 1.4rem;
 }
@@ -121,7 +121,7 @@ body{
   justify-content: space-between;
   background-color: hsla(234, 85%, 45%, 0.25);
   border: none;
-  border-radius: 15px;
+  border-radius: 10px;
   position: relative;
   bottom: 1.4rem;
 }
@@ -154,4 +154,13 @@ body{
 
 .left p{
   display:inline-block;
+}
+
+.right{
+  padding-right: 1rem;
+  color: grey;
+}
+
+.right bold{
+  color: black;
 }
