--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ body{
 .box-1{
   grid-row: 1/ span 6;
   grid-column:1 / span 1;
-  background-color: hsl(241, 59%, 78%);
+  background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
   display: grid;
   border: none;
   border-radius: 20px;
@@ -46,24 +46,13 @@ body{
   justify-items: center;
 }
 
-.left h2{
-  grid-row: 1/ span 1;
-  grid-column:1 / span 1;
+.box-1 h2{
+  color: hsl(241, 100%, 89%)
 }
 
 .score{
-  grid-row: 2/ span 3;
-  grid-column:1 / span 1
-}
-
-.left h1{
-  grid-row: 5/ span 1;
-  grid-column:1 / span 1
-}
-
-.left p{
-  grid-row: 6/ span 1;
-  grid-column:1 / span 1
+  position: relative;
+  bottom: 2rem;
 }
 
 .box-2 h2{
@@ -75,7 +64,7 @@ body{
   display: inline-flex;
   width: 80%;
   justify-content: space-between;
-  background-color: hsla(0, 100%, 67%, 0.25);
+  background-color: hsla(0, 100%, 67%, 0.1);
   border: none;
   border-radius: 10px;
   position: relative;
@@ -89,7 +78,7 @@ body{
   display: inline-flex;
   width: 80%;
   justify-content: space-between;
-  background-color: hsla(39, 100%, 56%, 0.25);
+  background-color: hsla(39, 100%, 56%, 0.1);
   border: none;
   border-radius: 10px;
   position: relative;
@@ -104,7 +93,7 @@ body{
   display: inline-flex;
   width: 80%;
   justify-content: space-between;
-  background-color: hsla(166, 100%, 37%, 0.25);
+  background-color: hsla(166, 100%, 37%, 0.1);
   border: none;
   border-radius: 10px;
   position: relative;
@@ -119,7 +108,7 @@ body{
   display: inline-flex;
   width: 80%;
   justify-content: space-between;
-  background-color: hsla(234, 85%, 45%, 0.25);
+  background-color: hsla(234, 85%, 45%, 0.1);
   border: none;
   border-radius: 10px;
   position: relative;
@@ -163,4 +152,42 @@ body{
 
 .right bold{
   color: black;
+}
+
+.score{
+  background-image: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
+  height: 170px;
+  width: 170px;
+  border-radius: 50%;
+  margin: 0 auto;
+  color: grey;
+}
+
+.score bold{
+  color: white;
+  font-size: 3rem;
+  font-weight: bold;
+  position: relative;
+  top: 48px;
+}
+
+.score p{
+  color: hsl(241, 100%, 89%);
+  position: relative;
+  top: 25px;
+}
+
+.motivation h1 {
+  color: white;
+  position: relative;
+  bottom: 2rem;
+}
+
+.motivation p{
+  color: hsl(241, 100%, 89%);
+  text-align: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  position: relative;
+  bottom: 1.5rem;
 }
